<resources>
    <string name="app_name">Co-Working Hotel</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="clear_all_fields">Clear All Fields</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="phone_number">Phone Number</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
</resources>