<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/registerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFNameR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:helperText=" ">
                <EditText
                    android:id="@+id/etxFullNameR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/full_name" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="Gender"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack" />
                <TextView
                    android:id="@+id/txtGenderError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="nust be selected"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="16sp" />
                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male" />
                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female" />
                </RadioGroup>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsernameR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:helperText=" ">
                <EditText
                    android:id="@+id/etxUsernameR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:helperText=" ">
                <EditText
                    android:id="@+id/etxPhoneNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/phone_number" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPwdR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:helperText=" ">
                <EditText
                    android:id="@+id/etxPwdR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCPwdR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:helperText=" ">
                <EditText
                    android:id="@+id/etxCPwdR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password" />
            </com.google.android.material.textfield.TextInputLayout>
            <CheckBox
                android:id="@+id/agreementR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_to_the_terms_and_conditions"/>
            <TextView
                android:id="@+id/txtAgreementError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:text="Agreement must be checked!"
                android:textSize="12sp"
                android:textColor="@color/design_default_color_error" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">
                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/clear_all_fields"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>
                <Button
                    android:id="@+id/btnRegisterR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    style="@style/Widget.MaterialComponents.Button"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>